[gd_scene load_steps=18 format=3 uid="uid://ytgt7tgog6hd"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_h1ywy"]
[ext_resource type="Texture2D" uid="uid://cheq73fqqobpu" path="res://Assets/0x72_DungeonTilesetII_v1.4.png" id="2_wxkwm"]
[ext_resource type="PackedScene" uid="uid://dioyom8ah26br" path="res://Stats/Stats.tscn" id="3_s76kr"]
[ext_resource type="PackedScene" uid="uid://61d7i6b3vd42" path="res://Weapon/Weapon.tscn" id="4_c4q7j"]
[ext_resource type="PackedScene" uid="uid://c7imeivbq2c18" path="res://Box/Hurtbox.tscn" id="5_py21b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xdm3"]
bg_color = Color(0.541176, 0.105882, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ai655"]
bg_color = Color(0.254902, 0.588235, 0.305882, 1)

[sub_resource type="Animation" id="Animation_yt7gu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_0knk1"]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [75, 80, 75, 74]
}

[sub_resource type="Animation" id="Animation_gnswo"]
resource_name = "idle"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [72, 73]
}

[sub_resource type="Animation" id="Animation_gv0ix"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [79, 76, 77, 78]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nwws4"]
_data = {
"RESET": SubResource("Animation_yt7gu"),
"death": SubResource("Animation_0knk1"),
"idle": SubResource("Animation_gnswo"),
"walk": SubResource("Animation_gv0ix")
}

[sub_resource type="Animation" id="Animation_3ky5r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qt3ia"]
resource_name = "swing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_47yql"]
_data = {
"RESET": SubResource("Animation_3ky5r"),
"swing": SubResource("Animation_qt3ia")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_mw76x"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath("AnimationPlayer:current_animation")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath("Sprite2D:flip_h")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath("ProgressBar:value")
properties/3/spawn = true
properties/3/sync = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pmcv6"]

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_h1ywy")

[node name="PlayerCameraRemote" type="RemoteTransform2D" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -7.0
offset_top = -15.0
offset_right = 7.0
offset_bottom = -12.0
theme_override_styles/background = SubResource("StyleBoxFlat_7xdm3")
theme_override_styles/fill = SubResource("StyleBoxFlat_ai655")
max_value = 3.0
value = 3.0
rounded = true
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wxkwm")
hframes = 32
vframes = 16
frame = 3
region_rect = Rect2(128, 66, 143, 32)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_nwws4")
}

[node name="Stats" parent="." instance=ExtResource("3_s76kr")]
max_health = 10

[node name="Weapon" parent="." instance=ExtResource("4_c4q7j")]
position = Vector2(0, 8)

[node name="AnimationPlayer" parent="Weapon/Area2D" index="2"]
autoplay = "swing"
libraries = {
"": SubResource("AnimationLibrary_47yql")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_mw76x")

[node name="Hurtbox" parent="." instance=ExtResource("5_py21b")]
position = Vector2(0, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_pmcv6")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="body_entered" from="Weapon/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Weapon"]
